--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.9.2",
     "core-js": "^2.5.4",
     "ng2-charts": "^2.3.0",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
